# ot-harjoitustyo

./: .gitignore  .pylintrc  README.md  pyproject.toml  tasks.py
dokumentaatio/: kayttoohje.md  testaus.md  tests.md  tuntikirjanpito.md  tuntikirjanpito.txt  user_manual.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
src/: index.py  snack.py  snake.py
src/classes/: snake.py
src/help_functions/: help_functions.py
src/tests/: snake_test.py
