[tool.poetry]
name = "snake"
version = "0.1.0"
description = "snake_game"
authors = [" Tatu Kuussaari <tatu@kuussaari.fi>"]

[tool.poetry.dependencies]
python = "^3.10"
invoke = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
